--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/itLogin"
@@ -7,4 +8,8 @@
     <item
         android:id="@+id/itLogout"
         android:title="Ausloggen" />
+    <item
+        android:id="@+id/itName"
+        android:title="@string/DisplayName"
+        app:showAsAction="never" />
 </menu>
